# sppc

./: CMakeLists.txt  README.md  library.c  library.h  macros.h
headers/sppc/: macros.h  sppc.h  structs.h
headers/sppc/inner/: rng.h
headers/sppc2/: sppc2.h
headers/sppc2/inner/: rng.h
sources/sppc/: sppc.c
sources/sppc2/: sppc2.c
